# raycast-experiments

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
lib/dlist/: CMakeLists.txt  dlist.c  dlist.h
src/: CMakeLists.txt  crayconsts.h  craymath.c  craymath.h  display.c  display.h  input.c  input.h  main.c  math.c  math.h  render.c  render.h  scene.c  scene.h  utils.c
src/cray/: CMakeLists.txt  craymath.c  craytime.c  crconsts.h  crdisplay.c  crdisplay.h  crdraw.c  crdraw.h  crinput.c  crinput.h  crlist.c  crmath.c  crmath.h  crprofile.c  crprofile.h  crrender.c  crrender.h  crscene.c  crscene.h  crtime.c  crtime.h  crtypes.c  crtypes.h  display.c  dlist.c  dlist.h  input.c  input.h  render.c  render.h  scene.c  scene.h  time.c  time.h
src/crprofile/: CMakeLists.txt  main.c
src/crrpifb/: CMakeLists.txt  crrpifb_display.c  crrpifb_display.h  crrpifb_input.c  crrpifb_input.h  vcio.h
src/crsdl2/: CMakeLists.txt  crsdl2_display.c  crsdl2_display.h  crsdl2_input.c  crsdl2_input.h
src/mathprofile/: CMakeLists.txt  main.c
src/raycastdemo/: CMakeLists.txt  main.c  raysettings.c  raysettings.h
src/rpidisplay/: CMakeLists.txt  main.c  rpibase.h  rpifb.c  rpifb.h  rpimailbox.c  rpimailbox.h
src/rpitest/: CMakeLists.txt  main.c
