cmake_minimum_required(VERSION 3.8)

project(craycaster)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set(SDL2_DIR $ENV{SDL2_DIR})
set(CRAY_DIR "${CMAKE_SOURCE_DIR}/src/cray")

if (MSVC)
    add_compile_options(/W3)
    #add_compile_options(/WX)
elseif(UNIX)
   set(MATH_LIBS m dl)
   #add_compile_options(-Wall -Wextra -pedantic -Werror)
   #add_compile_options(-Wall) 
   #add_compile_options(-pg)
   #add_compile_options(-g)
   #add_compile_options(-o6)
endif()

if(ISRPI)
   add_compile_options(-o0)
   #add_compile_options(-g)
   add_compile_options(-nostartfiles)
   add_compile_options(-mfloat-abi=hard)
   add_compile_definitions(RPI1)
endif(ISRPI)

add_subdirectory("src/cray")
add_subdirectory("src/raycastdemo")
add_subdirectory("src/crprofile")

if (ISRPI)
    add_subdirectory("src/rpitest")
    add_subdirectory("src/rpidisplay")
endif(ISRPI)
